fix logo alignment due to padding inside png

--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -26,7 +26,9 @@
 
 .App-header img,
 .App-footer img {
+	position: relative;
 	height: 40px;
+	left: -5px; /* logo png has padding - account for this for alignment */
 }
 
 .Restaurant-search {
